--- a/address-book-proj/package.json
+++ b/address-book-proj/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "firebase": "^8.3.2",
     "vue": "^2.6.12",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
