--- a/address-book-proj/package.json
+++ b/address-book-proj/package.json
@@ -12,7 +12,8 @@
     "firebase": "^8.3.2",
     "vue": "^2.6.12",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.5.0",
